--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -50,7 +50,9 @@
 .img-product-left img {
   display: block;
   margin-bottom: 10px;
-  margin-left: 100px;
+}
+.col-3 {
+  width: 10% !important;
 }
 /* ========================================== */
 .detail-right-title {
