--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -78,3 +78,7 @@ span.blog-main-item-title-bottom-page-shop {
   left: 80px;
   width: auto;
 }
+.blog-main-item a {
+  text-decoration: none;
+  color: #212529;
+}
