--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -43,7 +43,7 @@
   width: 80% !important;
 }
 .row.category-list-row {
-  flex-wrap: nowrap;
+  /* flex-wrap: nowrap; */
   align-items: center;
 }
 
